--- a/planning.html
+++ b/planning.html
@@ -8,7 +8,9 @@
 <style>
 :root{
   --orange:#ff6b00;
+  --orange2:#c94f00;
   --text:#f4f4f4;
+  --red:#ff2d2d;
 }
 *{box-sizing:border-box}
 html,body{height:100%}
@@ -35,7 +37,7 @@ header{
   text-align:center;
   font-weight:950;
   letter-spacing:.6px;
-  background:linear-gradient(180deg,var(--orange),#c94f00);
+  background:linear-gradient(180deg,var(--orange),var(--orange2));
 }
 
 /* layout */
@@ -52,8 +54,9 @@ header{
   justify-content:space-between;
   align-items:center;
   margin:10px 0 10px;
+  gap:10px;
 }
-.monthbar button{
+.navbtn{
   background:rgba(0,0,0,.45);
   border:1px solid rgba(255,255,255,.10);
   color:white;
@@ -64,11 +67,25 @@ header{
   cursor:pointer;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  flex:0 0 auto;
 }
-.monthbar h2{
-  margin:0;
-  font-size:22px;
+.navbtn:active{transform:scale(.97)}
+.navbtn.is-hidden{visibility:hidden; pointer-events:none}
+
+/* ✅ Bandeau mois */
+.monthpill{
+  flex:1 1 auto;
+  height:46px;
+  border-radius:16px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
   font-weight:950;
+  font-size:20px;
+  letter-spacing:.4px;
+  background:linear-gradient(180deg,var(--orange),var(--orange2));
+  border:1px solid rgba(255,255,255,.14);
+  box-shadow: 0 14px 28px rgba(0,0,0,.28);
   text-shadow: 0 10px 20px rgba(0,0,0,.45);
 }
 
@@ -86,11 +103,11 @@ header{
   opacity:.78;
 }
 
-/* ✅ GRID “Samsung-like” : gros jours, plus d’espace */
+/* ✅ GRID “Samsung-like” */
 .grid{
   display:grid;
   grid-template-columns:repeat(7,1fr);
-  gap:10px; /* ✅ espace */
+  gap:10px;
   flex:1;
   align-content:start;
 }
@@ -99,7 +116,7 @@ header{
 .day{
   position:relative;
   border-radius:18px;
-  height:62px; /* ✅ taille “gros jours” */
+  height:62px; /* gros */
   display:flex;
   align-items:center;
   justify-content:center;
@@ -108,25 +125,26 @@ header{
   border:1px solid rgba(255,255,255,.10);
   box-shadow: 0 14px 28px rgba(0,0,0,.28);
 }
-
 .day.disabled{
   opacity:.18;
   box-shadow:none;
 }
-
 .day .num{
   font-weight:950;
-  font-size:18px; /* ✅ gros chiffre */
+  font-size:18px;
   text-shadow: 0 10px 18px rgba(0,0,0,.6);
 }
-
-/* ✅ jour coloré = couleur pleine visible */
 .day[data-colored="1"]{
-  border:2px solid rgba(255,255,255,.18);
+  border:2px solid rgba(255,255,255,.16);
 }
-
 .day.clickable{cursor:pointer}
 .day.clickable:active{transform:scale(.97)}
+
+/* ✅ Jour actif entouré rouge */
+.day.active{
+  outline: 3px solid var(--red);
+  outline-offset: 2px;
+}
 
 /* ✅ LÉGENDE 2 COLONNES (compacte) */
 .legend{
@@ -150,14 +168,12 @@ header{
   overflow:auto;
   width: min(360px, calc(100vw - 20px));
 }
-
 .legend-item{
   display:flex;
   align-items:center;
   gap:10px;
   font-size:13px;
   font-weight:950;
-
   background: rgba(0,0,0,.16);
   padding:8px 10px;
   border-radius:14px;
@@ -167,7 +183,7 @@ header{
 .legend-dot{
   width:16px;
   height:16px;
-  border-radius:4px;
+  border-radius:4px; /* carré */
   border:1px solid rgba(255,255,255,.18);
   flex:0 0 auto;
 }
@@ -197,13 +213,11 @@ header{
   overflow:auto;
 }
 .panel-overlay.active .panel{ transform:translateY(0); }
-
 .panel h3{
   margin:0 0 10px 0;
   font-weight:950;
   color:var(--orange);
 }
-
 .event{
   margin-bottom:10px;
   padding-bottom:8px;
@@ -213,7 +227,6 @@ header{
 .event-title{font-weight:950}
 .event-time{font-size:12px;opacity:.75}
 .event-note{font-size:12px;margin-top:6px;opacity:.95; line-height:1.25}
-
 .close-btn{
   position:absolute;
   top:10px;
@@ -221,6 +234,14 @@ header{
   font-size:18px;
   cursor:pointer;
   user-select:none;
+}
+
+/* petits écrans */
+@media (max-width: 360px){
+  .grid{gap:8px}
+  .day{height:56px;border-radius:16px}
+  .day .num{font-size:16px}
+  .monthpill{font-size:18px}
 }
 </style>
 </head>
@@ -232,9 +253,9 @@ header{
 
 <div class="container">
   <div class="monthbar">
-    <button id="prev">‹</button>
-    <h2 id="monthTitle"></h2>
-    <button id="next">›</button>
+    <button class="navbtn" id="prev" aria-label="Mois précédent">‹</button>
+    <div class="monthpill" id="monthTitle">—</div>
+    <button class="navbtn" id="next" aria-label="Mois suivant">›</button>
   </div>
 
   <div class="weekdays">
@@ -255,11 +276,13 @@ header{
 </div>
 
 <script>
-const API="https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec"; // ✅ mets ton /exec
+/* ✅ mets TON /exec ici */
+const API="https://script.google.com/macros/s/XXXX/exec";
 const YEAR=2026;
 
 const MONTHS=["Janvier","Février","Mars","Avril","Mai","Juin","Juillet","Août","Septembre","Octobre","Novembre","Décembre"];
 
+/* fallback couleurs */
 const DEFAULT_CATS = [
   ["Navette", "#2f7bd3"],
   ["FMA centre", "#ffb15a"],
@@ -270,9 +293,16 @@ const DEFAULT_CATS = [
   ["JSP", "#4dabf7"]
 ];
 
-let currentMonth=1; // ✅ démarre sur février si tu veux (0=janv). Mets 0 si tu veux janvier.
-let EVENTS=[];
-let CAT_COLORS={};
+let currentMonth = 0; // 0=Janvier
+let selectedDate = ""; // YYYY-MM-DD (jour actif)
+let EVENTS = [];
+let CAT_COLORS = {};
+
+const $prev = document.getElementById("prev");
+const $next = document.getElementById("next");
+const $monthTitle = document.getElementById("monthTitle");
+const $grid = document.getElementById("grid");
+const $legend = document.getElementById("legend");
 
 function jsonp(url,cb){
   return new Promise((res,rej)=>{
@@ -295,7 +325,31 @@ function escapeHtml(s){
     .replaceAll("'","&#039;");
 }
 
-function normDate10_(v){ return String(v||"").slice(0,10); }
+/* ✅ normalise date -> YYYY-MM-DD (ISO, FR dd/mm/yyyy, Date string) */
+function normDate10_(v){
+  if(v == null) return "";
+  const s = String(v).trim();
+
+  if (/^\d{4}-\d{2}-\d{2}/.test(s)) return s.slice(0,10);
+
+  const m = s.match(/^(\d{1,2})\/(\d{1,2})\/(\d{4})/);
+  if (m){
+    const dd = String(m[1]).padStart(2,"0");
+    const mm = String(m[2]).padStart(2,"0");
+    const yy = m[3];
+    return `${yy}-${mm}-${dd}`;
+  }
+
+  const d = new Date(s);
+  if(!isNaN(d.getTime())){
+    const yy = d.getFullYear();
+    const mm = String(d.getMonth()+1).padStart(2,"0");
+    const dd = String(d.getDate()).padStart(2,"0");
+    return `${yy}-${mm}-${dd}`;
+  }
+
+  return "";
+}
 
 function mergeDefaultCats_(){
   const def = Object.fromEntries(DEFAULT_CATS);
@@ -303,8 +357,7 @@ function mergeDefaultCats_(){
 }
 
 function buildLegendGlobal_(){
-  const legend=document.getElementById("legend");
-  legend.innerHTML="";
+  $legend.innerHTML="";
   const entries = Object.entries(CAT_COLORS).sort((a,b)=>a[0].localeCompare(b[0], "fr"));
   for(const [cat,color] of entries){
     const item=document.createElement("div");
@@ -314,8 +367,18 @@ function buildLegendGlobal_(){
     dot.style.background=color || "#666";
     item.appendChild(dot);
     item.append(cat);
-    legend.appendChild(item);
+    $legend.appendChild(item);
   }
+}
+
+function getEventDate_(e){
+  // tolérant: date / Date / jour / day
+  return normDate10_(e?.date ?? e?.Date ?? e?.jour ?? e?.day ?? "");
+}
+
+function getNote_(e){
+  // tolérant: details / note / remarque / description
+  return String(e?.details ?? e?.note ?? e?.remarque ?? e?.description ?? "").trim();
 }
 
 async function loadData(){
@@ -345,20 +408,39 @@ async function loadData(){
     EVENTS=[];
   }
 
+  // jour actif par défaut = aujourd'hui si dans l'année, sinon vide
+  const now = new Date();
+  if(now.getFullYear() === YEAR){
+    const yy = YEAR;
+    const mm = String(now.getMonth()+1).padStart(2,"0");
+    const dd = String(now.getDate()).padStart(2,"0");
+    selectedDate = `${yy}-${mm}-${dd}`;
+    currentMonth = now.getMonth();
+  }else{
+    selectedDate = "";
+    currentMonth = 0;
+  }
+
   buildCalendar();
 }
 
+function updatePrevVisibility_(){
+  // ✅ flèche gauche inutile en janvier -> on la cache
+  if(currentMonth === 0) $prev.classList.add("is-hidden");
+  else $prev.classList.remove("is-hidden");
+}
+
 function buildCalendar(){
-  document.getElementById("monthTitle").innerText=MONTHS[currentMonth];
-  const grid=document.getElementById("grid");
-  grid.innerHTML="";
+  $monthTitle.textContent = MONTHS[currentMonth];
+  updatePrevVisibility_();
+  $grid.innerHTML="";
 
   const first=new Date(YEAR,currentMonth,1);
   const last=new Date(YEAR,currentMonth+1,0);
   const startDay=(first.getDay()+6)%7;
 
   const monthPrefix = `${YEAR}-${String(currentMonth+1).padStart(2,"0")}-`;
-  const monthEvents = EVENTS.filter(e => normDate10_(e.date).startsWith(monthPrefix));
+  const monthEvents = EVENTS.filter(e => getEventDate_(e).startsWith(monthPrefix));
 
   for(let i=0;i<42;i++){
     const dayNum=i-startDay+1;
@@ -367,37 +449,52 @@ function buildCalendar(){
 
     if(dayNum<1||dayNum>last.getDate()){
       cell.classList.add("disabled");
-      grid.appendChild(cell);
+      $grid.appendChild(cell);
       continue;
     }
 
+    const dateStr=`${YEAR}-${String(currentMonth+1).padStart(2,"0")}-${String(dayNum).padStart(2,"0")}`;
     cell.innerHTML = `<div class="num">${dayNum}</div>`;
 
-    const dateStr=`${YEAR}-${String(currentMonth+1).padStart(2,"0")}-${String(dayNum).padStart(2,"0")}`;
-    const dayEvents = monthEvents.filter(e => normDate10_(e.date) === dateStr);
+    // active day red border
+    if(selectedDate === dateStr) cell.classList.add("active");
+
+    const dayEvents = monthEvents.filter(e => getEventDate_(e) === dateStr);
 
     if(dayEvents.length){
       const cats=[...new Set(dayEvents.map(e=>String(e.category||"").trim()).filter(Boolean))];
       const colors=cats.map(c=>CAT_COLORS[c]||"#666");
 
-      if(colors.length===1){
+      if(colors.length === 1){
         cell.style.background = colors[0];
       }else{
-        // ✅ 2+ catégories : diagonale sur les 2 premières
+        // ✅ 2+ : diagonale sur les 2 premières
         cell.style.background = `linear-gradient(135deg, ${colors[0]} 50%, ${colors[1] || colors[0]} 50%)`;
       }
+      cell.dataset.colored="1";
 
-      cell.dataset.colored = "1";
-
-      // cliquable seulement si note
-      const hasNote = dayEvents.some(e => String(e.details||"").trim() !== "");
+      // ✅ clic uniquement si note
+      const hasNote = dayEvents.some(e => getNote_(e) !== "");
       if(hasNote){
         cell.classList.add("clickable");
-        cell.onclick=()=>openPanel(dateStr, dayEvents);
+        cell.onclick = () => {
+          selectedDate = dateStr;
+          // refresh active border without rebuilding everything heavy:
+          // (simple: rebuild month; 42 cells only)
+          buildCalendar();
+          openPanel(dateStr, dayEvents);
+        };
       }
+    }else{
+      // jour sans event -> clic sélection (juste entouré)
+      cell.classList.add("clickable");
+      cell.onclick = () => {
+        selectedDate = dateStr;
+        buildCalendar();
+      };
     }
 
-    grid.appendChild(cell);
+    $grid.appendChild(cell);
   }
 }
 
@@ -406,34 +503,39 @@ function openPanel(date,events){
   const content=document.getElementById("panelContent");
 
   const list = events
-    .filter(e => String(e.details||"").trim() !== "")
+    .filter(e => getNote_(e) !== "")
     .sort((a,b)=>String(a.start||"").localeCompare(String(b.start||"")));
 
   content.innerHTML=`<h3>${date.split("-").reverse().join("/")}</h3>`;
 
-  for(const e of list){
-    const cat = String(e.category||"").trim();
-    const col = CAT_COLORS[cat] || "#666";
-    const div=document.createElement("div");
-    div.className="event";
-    div.innerHTML=`
-      <div class="event-title">${escapeHtml(e.title||"")}</div>
-      <div class="event-time">${escapeHtml(e.start||"")}${e.end?(" – "+escapeHtml(e.end)):""} • <span style="font-weight:950;color:${col}">${escapeHtml(cat||"")}</span></div>
-      <div class="event-note">${escapeHtml(e.details||"")}</div>
-    `;
-    content.appendChild(div);
+  if(!list.length){
+    content.innerHTML += `<div style="opacity:.75;font-size:12px">Aucune note.</div>`;
+  }else{
+    for(const e of list){
+      const cat = String(e.category||"").trim();
+      const col = CAT_COLORS[cat] || "#666";
+      const div=document.createElement("div");
+      div.className="event";
+      div.innerHTML=`
+        <div class="event-title">${escapeHtml(e.title||"")}</div>
+        <div class="event-time">${escapeHtml(e.start||"")}${e.end?(" – "+escapeHtml(e.end)):""} • <span style="font-weight:950;color:${col}">${escapeHtml(cat||"")}</span></div>
+        <div class="event-note">${escapeHtml(getNote_(e))}</div>
+      `;
+      content.appendChild(div);
+    }
   }
 
   overlay.classList.add("active");
 }
 
-/* ✅ NAV : boucle 12 mois */
-document.getElementById("prev").onclick=()=>{
-  currentMonth = (currentMonth + 11) % 12;
+/* ✅ NAV */
+$prev.onclick=()=>{
+  if(currentMonth === 0) return; // janvier -> inutile
+  currentMonth = currentMonth - 1;
   buildCalendar();
 };
-document.getElementById("next").onclick=()=>{
-  currentMonth = (currentMonth + 1) % 12;
+$next.onclick=()=>{
+  currentMonth = (currentMonth + 1) % 12; // boucle à décembre->janvier
   buildCalendar();
 };
 
